// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Drawer default 1`] = `
.c0 {
  padding: 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  background-color: #FFF;
}

.c11 {
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c18 {
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c20 {
  margin-top: 16px;
  margin-bottom: 4px;
}

.c13 {
  width: 12px;
  display: block;
  max-width: 100%;
  height: auto;
}

.c14 {
  color: #123466;
  margin: 0px;
  margin-left: 8px;
  font-family: Circular,sans-serif;
  font-size: 19px;
  line-height: 1.47;
  font-weight: 400;
}

.c19 {
  color: #8D9BA7;
  margin: 0px;
  margin-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  font-family: Circular,sans-serif;
  font-size: 14px;
  line-height: 1.43;
  font-weight: 400;
}

.c21 {
  color: #53616E;
  margin: 0px;
  margin-bottom: 8px;
  padding-left: 24px;
  padding-right: 24px;
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 700;
  text-transform: uppercase;
}

.c2::after {
  display: inline-block;
  font-family: Material-Design-Iconic-Font;
  text-align: center;
  content: '\\f197';
}

.c15 {
  margin-left: 64px;
}

.c15::after {
  display: inline-block;
  font-family: Material-Design-Iconic-Font;
  text-align: center;
  content: '\\f136';
}

.c10 {
  font-weight: 600;
}

.c17 {
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 32px;
}

.c17:last-of-type {
  border-bottom: none;
}

.c8 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

.c23 {
  text-decoration: none;
  color: #009BC0;
  cursor: pointer;
}

.c23:link,
.c23:visited {
  color: #009BC0;
}

.c23:hover {
  color: #0081AA;
}

.c23:active {
  color: #144E6F;
}

.c5 {
  width: 100%;
  height: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  opacity: 0;
}

.c7 {
  background-color: #FFF;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 200px;
  border-radius: unset;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.c3 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  visibility: hidden;
  z-index: 1031;
}

.c3.show {
  visibility: visible;
}

.c3.show > .c4 {
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  opacity: 1;
  background-color: rgba(0,0,0,0.5);
}

.c3.show > .c6 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}

.c16 {
  overflow-y: auto;
  height: 100%;
}

.c1 {
  cursor: pointer;
  font-family: Circular,sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 600;
  color: #B4BDC5;
}

.c22 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c22:hover,
.c22:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c22:link,
.c22:visited {
  color: #8D9BA7;
}

.c22:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c22.active-class {
  color: #000;
}

.c24 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c24:hover,
.c24:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c24:link,
.c24:visited {
  color: #8D9BA7;
}

.c24:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c24.active-class {
  color: #000;
}

.c25 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c25:hover,
.c25:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c25:link,
.c25:visited {
  color: #8D9BA7;
}

.c25:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c25.active-class {
  color: #000;
}

.c26 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c26:hover,
.c26:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c26:link,
.c26:visited {
  color: #8D9BA7;
}

.c26:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c26.active-class {
  color: #000;
}

.c27 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c27:hover,
.c27:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c27:link,
.c27:visited {
  color: #8D9BA7;
}

.c27:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c27.active-class {
  color: #000;
}

.c28 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c28:hover,
.c28:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c28:link,
.c28:visited {
  color: #8D9BA7;
}

.c28:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c28.active-class {
  color: #000;
}

.c29 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c29:hover,
.c29:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c29:link,
.c29:visited {
  color: #8D9BA7;
}

.c29:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c29.active-class {
  color: #000;
}

.c30 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c30:hover,
.c30:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c30:link,
.c30:visited {
  color: #8D9BA7;
}

.c30:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c30.active-class {
  color: #000;
}

.c31 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c31:hover,
.c31:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c31:link,
.c31:visited {
  color: #8D9BA7;
}

.c31:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c31.active-class {
  color: #000;
}

.c32 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c32:hover,
.c32:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c32:link,
.c32:visited {
  color: #8D9BA7;
}

.c32:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c32.active-class {
  color: #000;
}

.c33 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c33:hover,
.c33:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c33:link,
.c33:visited {
  color: #8D9BA7;
}

.c33:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c33.active-class {
  color: #000;
}

.c34 {
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
  color: #8D9BA7;
  display: block;
  padding: 8px 24px;
  text-decoration: none;
}

.c34:hover,
.c34:focus {
  background-color: #f3f3f3;
  color: #53616E;
  outline: none;
}

.c34:link,
.c34:visited {
  color: #8D9BA7;
}

.c34:active {
  background-color: #D3F3F3;
  color: #0081AA;
}

.c34.active-class {
  color: #000;
}

@media screen and (min-width:32em) {
  .c0 {
    width: 50%;
  }
}

<div
  className="c0 "
>
  <div
    className=""
  >
    <span
      className="c1 c2 "
      onClick={[Function]}
    />
    <div
      className="c3 "
    >
      <div
        className="c4 c5 "
      />
      <div
        className="c6 c7 c8 c9 "
      >
        <div
          className="c10 c11 "
        >
          <div
            className="c12 "
          >
            <img
              className="c13 "
              src="https://www.zenefits.com/static/images/logos/icon-footer-zenefits.svg"
            />
            <p
              className="c14"
            >
              zenefits
            </p>
            <span
              className="c1 c15 "
              onClick={[Function]}
            />
          </div>
        </div>
        <div
          className="c16 c17 c18 "
        >
          <p
            className="c19"
          >
            Dashboard
          </p>
          <div
            className="c20 "
          >
            <p
              className="c21"
            >
              Section 1
            </p>
            <a
              className="active-class c22 c23 "
              href="https://google.com"
              rel="noreferrer noopener "
              target="_blank"
            >
              Link 1 (active)
            </a>
            <a
              className="c24 c23 "
              href="https://google.com"
              rel="noreferrer noopener "
              target="_blank"
            >
              Link 2
            </a>
            <a
              className="c25 c23 "
              href="https://google.com"
              rel="noreferrer noopener "
              target="_blank"
            >
              Link 3
            </a>
            <a
              className="c26 c23 "
              href="https://google.com"
              rel="noreferrer noopener "
              target="_blank"
            >
              Link 4
            </a>
            <a
              className="c27 c23 "
              href="https://google.com"
              rel="noreferrer noopener "
              target="_blank"
            >
              Link 5
            </a>
            <a
              className="c28 c23 "
              href="https://google.com"
              rel="noreferrer noopener "
              target="_blank"
            >
              Link 6
            </a>
          </div>
          <div
            className="c20 "
          >
            <p
              className="c21"
            >
              Section 2
            </p>
            <a
              aria-current={false}
              className="c29"
              href="#/sdfsd1"
              onClick={[Function]}
              style={undefined}
            >
               NavLink 1 
            </a>
            <a
              aria-current={false}
              className="c30"
              href="#/sdfsd2"
              onClick={[Function]}
              style={undefined}
            >
               NavLink 2 
            </a>
            <a
              aria-current={false}
              className="c31"
              href="#/sdfsd3"
              onClick={[Function]}
              style={undefined}
            >
               NavLink 3 
            </a>
            <a
              aria-current={false}
              className="c32"
              href="#/sdfsd4"
              onClick={[Function]}
              style={undefined}
            >
               NavLink 4 
            </a>
            <a
              aria-current={false}
              className="c33"
              href="#/sdfsd5"
              onClick={[Function]}
              style={undefined}
            >
               NavLink 5 
            </a>
            <a
              aria-current={false}
              className="c34"
              href="#/sdfsd6"
              onClick={[Function]}
              style={undefined}
            >
               NavLink 6 
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TopNavBar default 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-size: 16px;
  margin-left: 16px;
  padding-left: 16px;
  border-left-color: #FF5745;
  border-left-width: 1px;
  border-left-style: solid;
}

.c12 {
  margin-right: 24px;
}

.c8 {
  width: 12px;
  display: block;
  max-width: 100%;
  height: auto;
}

.c7 {
  color: #FF5745;
}

.c14 {
  color: #123466;
  font-size: 14px;
  margin-right: 32px;
}

.c9 {
  margin: 0px;
  margin-left: 8px;
  font-family: Circular,sans-serif;
  font-size: 19px;
  line-height: 1.47;
  font-weight: 400;
}

.c17 {
  margin-left: 8px;
}

.c17::after {
  display: inline-block;
  font-family: Material-Design-Iconic-Font;
  text-align: center;
  content: '\\f2f9';
}

.c16 {
  display: block;
  line-height: 1.33;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 12px;
  text-align: center;
  padding-top: 8px;
}

.c15 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
  color: #FFF;
  border-radius: 50%;
  box-shadow: 0 0 0 2px #D6DEE9;
  background-color: #303162;
  opacity: 1;
  object-fit: cover;
}

.c6 {
  text-decoration: none;
  color: #FF5745;
  cursor: pointer;
}

.c6:link,
.c6:visited {
  color: #FF5745;
}

.c6:hover {
  color: #FF5745;
}

.c6:active {
  color: #FF5745;
}

.c13 {
  text-decoration: none;
  color: #123466;
  cursor: pointer;
}

.c13:link,
.c13:visited {
  color: #123466;
}

.c13:hover {
  color: #123466;
}

.c13:active {
  color: #123466;
}

.c3 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  position: fixed;
  height: 64px;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1031;
  background-color: #FFF;
  color: #123466;
}

.c0 {
  height: 64px;
}

<div
  className="c0 "
>
  <div
    className="c1 c2 "
  >
    <div
      className="c3 c4 "
    >
      <div
        className="c5 "
      >
        <a
          className="c6 c7 "
          href="/dashboard"
          rel="noreferrer noopener "
        >
          <div
            className="c5 "
          >
            <img
              className="c8 "
              src="https://www.zenefits.com/static/images/logos/icon-footer-zenefits.svg"
            />
            <p
              className="c9"
            >
              zenefits
            </p>
          </div>
        </a>
        <div
          className="c10 "
        >
          <div
            className="c11 "
          >
            <span
              className=""
            >
              Product Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="c5 "
      >
        <div
          className="c12 "
        />
        <a
          className="c13 c14 "
          href="/dashboard/#/support"
          rel="noreferrer noopener "
        >
          Help
        </a>
        <div>
          <div>
            <div
              className="button-group-child-item c5 "
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              target={
                <Flex
                  align="center"
                  borderColor="grayscale.f"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <Avatar
                    disabled={false}
                    firstName={undefined}
                    isSquare={false}
                    lastName={undefined}
                    photoUrl={undefined}
                    s="small"
                  />
                  <Span
                    iconName="chevron-down"
                    ml={2}
                  />
                </Flex>
              }
            >
              <div
                className="c15 "
                disabled={false}
              >
                <span
                  className="c16 "
                  s="small"
                  title="undefined undefined"
                >
                    
                </span>
              </div>
              <span
                className="c17 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TopNavBar with children 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  font-size: 16px;
  margin-left: 16px;
  padding-left: 16px;
  border-left-color: #FF5745;
  border-left-width: 1px;
  border-left-style: solid;
}

.c12 {
  margin-left: 8px;
}

.c8 {
  width: 12px;
  display: block;
  max-width: 100%;
  height: auto;
}

.c7 {
  color: #FF5745;
}

.c18 {
  color: #123466;
  font-size: 14px;
  margin-right: 32px;
}

.c14 {
  background-color: transparent;
  color: #8D9BA7;
}

.c9 {
  margin: 0px;
  margin-left: 8px;
  font-family: Circular,sans-serif;
  font-size: 19px;
  line-height: 1.47;
  font-weight: 400;
}

.c21 {
  margin-left: 8px;
}

.c21::after {
  display: inline-block;
  font-family: Material-Design-Iconic-Font;
  text-align: center;
  content: '\\f2f9';
}

.c16 {
  margin-right: 8px;
}

.c16::after {
  display: inline-block;
  font-family: Material-Design-Iconic-Font;
  text-align: center;
  content: '\\f1c3';
}

.c15 {
  visibility: visible;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.5;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 16px;
  padding: 8px 8px;
}

.c13:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c13:focus:not(:disabled),
.c13:hover:not(:disabled) {
  color: #0081AA;
  background-color: transparent;
}

.c13:active:not(:disabled) {
  color: #144E6F;
  background-color: rgba(18,52,102,0.1);
}

.c13:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

.c20 {
  display: block;
  line-height: 1.33;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 12px;
  text-align: center;
  padding-top: 8px;
}

.c19 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
  color: #FFF;
  border-radius: 50%;
  box-shadow: 0 0 0 2px #D6DEE9;
  background-color: #303162;
  opacity: 1;
  object-fit: cover;
}

.c6 {
  text-decoration: none;
  color: #FF5745;
  cursor: pointer;
}

.c6:link,
.c6:visited {
  color: #FF5745;
}

.c6:hover {
  color: #FF5745;
}

.c6:active {
  color: #FF5745;
}

.c17 {
  text-decoration: none;
  color: #123466;
  cursor: pointer;
}

.c17:link,
.c17:visited {
  color: #123466;
}

.c17:hover {
  color: #123466;
}

.c17:active {
  color: #123466;
}

.c3 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  position: fixed;
  height: 64px;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1031;
  background-color: #FFF;
  color: #123466;
}

.c0 {
  height: 64px;
}

<div
  className="c0 "
>
  <div
    className="c1 c2 "
  >
    <div
      className="c3 c4 "
    >
      <div
        className="c5 "
      >
        <a
          className="c6 c7 "
          href="/dashboard"
          rel="noreferrer noopener "
        >
          <div
            className="c5 "
          >
            <img
              className="c8 "
              src="https://www.zenefits.com/static/images/logos/icon-footer-zenefits.svg"
            />
            <p
              className="c9"
            >
              zenefits
            </p>
          </div>
        </a>
        <div
          className="c10 "
        >
          <div
            className="c11 "
          >
            <span
              className=""
            >
              Product Title
            </span>
            <div
              className="c12 "
            >
              <button
                className="c13 c14 "
                disabled={false}
                mode="transparent"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="c15 "
                >
                  <span
                    className="c16 "
                  />
                  Search
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c5 "
      >
        <a
          className="c17 c18 "
          href="/dashboard/#/support"
          rel="noreferrer noopener "
        >
          Help
        </a>
        <div>
          <div>
            <div
              className="button-group-child-item c5 "
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              target={
                <Flex
                  align="center"
                  borderColor="grayscale.f"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <Avatar
                    disabled={false}
                    firstName={undefined}
                    isSquare={false}
                    lastName={undefined}
                    photoUrl={undefined}
                    s="small"
                  />
                  <Span
                    iconName="chevron-down"
                    ml={2}
                  />
                </Flex>
              }
            >
              <div
                className="c19 "
                disabled={false}
              >
                <span
                  className="c20 "
                  s="small"
                  title="undefined undefined"
                >
                    
                </span>
              </div>
              <span
                className="c21 "
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
